Añade soporte para favicon en la aplicación

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -79,6 +79,7 @@
             background: #0072ff;
         }
     </style>
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo-medium.png') }}">
 </head>
 <body>
     <div class="container">
